k8s/cluster-apps/truenas-ingress/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
subsets:
- addresses:
  - ip: 192.168.100.2
  ports:
  - name: http
    port: 80
    protocol: TCP
