k8s/cluster-apps/truenas-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
